<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessagebinding.data.Message"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.SendMessageActivity">
        <!--android:padding="10dp"-->

        <EditText
            android:id="@+id/etUser"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etUserMarginTop"
            android:minHeight="@dimen/etUserminHeight"
            android:text="@{message.user.name}"
            android:autofillHints=""
            android:textColorHint="@color/etUserColorHint"
            android:hint="@string/etUserHint" />

        <EditText
            android:id="@+id/etMessage"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etMessageMarginTop"
            android:minHeight="@dimen/etMessageminHeight"
            android:autofillHints=""
            android:textColorHint="@color/etMessageColorHint"
            android:text="@={message.content}"
            android:hint="@string/etMessageHint" />

        <Button
            android:onClick="sendMessage"
            android:id="@+id/btSend"
            android:layout_marginTop="@dimen/btSendMarginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btSendText" />

    </LinearLayout>
</layout>