<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessagebinding.data.Message"/>
    </data>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        tools:context=".ui.ViewMessageActivity">

        <TextView
            android:id="@+id/tvUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvUserTextMarginTop"
            android:minHeight="@dimen/tvUserTextminHeight"
            android:text="@string/tvUserText" />

        <TextView
            android:id="@+id/tvUserContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvUserMarginTop"
            android:minHeight="@dimen/tvUserminHeight"
            android:text="@{message.user.name}" />

        <TextView
            android:id="@+id/tvMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvMessageTextMarginTop"
            android:minHeight="@dimen/tvMessageTextminHeight"
            android:text="@string/tvMessageText" />

        <TextView
            android:id="@+id/tvMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvMessageMarginTop"
            android:minHeight="@dimen/tvMessageminHeight"
            android:text="@{message.content}" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icono"
            android:contentDescription="@string/imgMessage"/>
    </LinearLayout>
</layout>